# fastapi-try-1

./: pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py  settings.py
app/controllers/: company_controller.py  user_controller.py
app/middleware/: auth.py
app/models/: __init__.py  company.py  user.py
app/schemas/: admin_users.py  company.py  user.py
app/services/: company_services.py  user_service.py
